--- a/BOOTSTRAP-GRID/index4.html
+++ b/BOOTSTRAP-GRID/index4.html
@@ -15,7 +15,7 @@
         <tbody><tr>
           <td valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
             <tbody><tr>
-              <td width="50%" valign="top"><div style="margin: 10px;"><img src="C:\Users\User\Desktop\LOGO UCMB.png" alt="UCMB Logo"></div></td><!-- -- attaches logo mind the path ---->
+              <td width="50%" valign="top"><div style="margin: 10px;"><img src="C:\Users\User\Desktop\Introduction to HTML\BOOTSTRAP-GRID\LOGO UCMB.jpg" alt="UCMB Logo"></div></td><!-- -- attaches logo mind the path ---->
               <td width="60%" valign="top" style="border-left: 1px solid blue; font: size 14px;">
                 <p>
                 <strong>NAJJINGO SOLOME</strong><br> <!-- -- formatting name ---->
