--- a/BOOTSTRAP-GRID/index5.html
+++ b/BOOTSTRAP-GRID/index5.html
@@ -14,12 +14,13 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6">
-                <img src="BOOTSTRAP-GRID\img\LOGO UCMB.JPG" class="" alt="UCMB Logo"/>
+            <div class="col">
+                <img src="BOOTSTRAP-GRID\img\LOGO UCMB.JPG" class="" alt="UCMB Logo">
                 <!-- //<img src="Dr-strange.jpg" class="" alt="image of dr. strange"> -->
             </div>
             
-            <div class="col-lg-6 col-md-6">                         
+            <div class="col">     
+                <h1></h1>                    
                 <p class="Email body">
                     <strong>NAJJINGO SOLOME</strong><br> <!-- -- formatting name ---->
                     <strong>Monitoring and Evaluation Officer</strong><br> <!-- --format title and other details ---->
