--- a/Personal Blog/index.html
+++ b/Personal Blog/index.html
@@ -87,22 +87,23 @@
                 <div class="col-md-4 d-none d-md-block">
                     <div class="card">
                         <div class="card-header">
-                          Featured Posts
+                            Featured Posts
                         </div>
                         <ul class="list-group list-group-flush">
-                          <li class="list-group-item"><a href="#">What is refactory?</a></li>
-                          <li class="list-group-item"><a href="#">My Gallery</a></li>
-                          <li class="list-group-item"><a href="#">My Github</a></li>
+                            <li class="list-group-item"><a href="#">What is refactory?</a></li>
+                            <li class="list-group-item"><a href="#">My Gallery</a></li>
+                            <li class="list-group-item"><a href="#">My Github</a></li>
                         </ul>
-                      </div>
-              
+                    </div>
 
-                </div>
+
                 </div>
             </div>
+        </div>
 
-            <script src= "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
-                </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+            </script>
 
 </body>
 
