--- a/Personal Blog/index.html
+++ b/Personal Blog/index.html
@@ -7,62 +7,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <title>Document</title>
+    <title>NMSolome</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">My Blog</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="index.htlm">My blog</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link disabled">Disabled</a>
                     </li>
                 </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container-fluid d-none d-md-block" id="image_slider">
         <div class="row">
             <div class="column">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://picsum.photos/id/1011/500/150" class="d-block w-100" alt="Mountain">
+                            <img src="https://picsum.photos/id/237/500/150" class="d-block w-100" alt="Mountain">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>First slide label</h5>
                                 <p>Some representative placeholder content for the first slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="https://picsum.photos/id/1012/500/150" class="d-block w-100" alt="Animal">
+                            <img src="https://picsum.photos/id/239/500/150" class="d-block w-100" alt="Animal">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Second slide label</h5>
                                 <p>Some representative placeholder content for the second slide.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="https://picsum.photos/id/1013/500/150" class="d-block w-100" alt="Puppy">
+                            <img src="https://picsum.photos/id/238/500/150" class="d-block w-100" alt="Puppy">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid Solo d-none d-md-block" id="image_slider">
+        <div class="container">
             <div class="row">
                 <div class="col-md-8">
                     <div class="card">
@@ -86,23 +102,20 @@
                 </div>
                 <div class="col-md-4 d-none d-md-block">
                     <div class="card">
-                        <div class="card-header">
-                            Featured Posts
-                        </div>
+                        <div class="card-header">Featured Posts</div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item"><a href="#">What is refactory?</a></li>
-                            <li class="list-group-item"><a href="#">My Gallery</a></li>
-                            <li class="list-group-item"><a href="#">My Github</a></li>
+                            <li class="list-group-item">
+                                <a href="#">What is GIT?</a>
+                            </li>
                         </ul>
                     </div>
-
-
                 </div>
             </div>
         </div>
+    </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+        <script src="/Personal Blog/js/js/bootstrap.bundle.js"></script>
+            <!-- integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"> -->
             </script>
 
 </body>
