--- a/Personal Blog/index.html
+++ b/Personal Blog/index.html
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-        <script src="/Personal Blog/js/js/bootstrap.bundle.js"></script>
+        <script src="Personal Blog/js/js/bootstrap.bundle.js"></script>
             <!-- integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"> -->
             </script>
 
