--- a/BOOTSTRAP-GRID/index4.html
+++ b/BOOTSTRAP-GRID/index4.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html;charset=windows-1251" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-     <link href="CSS/bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet">
-     <link href="css/custom.css" rel="stylesheet">   
+    <link href="/BOOTSTRAP-GRID/CSS/bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet">
+    <link href="/BOOTSTRAP-GRID/CSS/custom.css" rel="stylesheet">    
     <title>My first Demo</title>
 </head>
 
