--- a/BOOTSTRAP-GRID/index5.html
+++ b/BOOTSTRAP-GRID/index5.html
@@ -6,16 +6,16 @@
     <meta http-equiv="Content-Type" content="text/html;charset=windows-1251" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>My first Demo</title>
-    <link href="ttps://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">  
-    
+    <link href="/BOOTSTRAP-GRID/CSS/bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet">
+    <link href="/BOOTSTRAP-GRID/CSS/custom.css" rel="stylesheet">   
+    <title>My first Demo</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="BOOTSTRAP-GRID\img\LOGO UCMB.JPG" class="" alt="UCMB Logo">
+                <img src="/BOOTSTRAP-GRID/LOGO UCMB.jpg" class="" alt="UCMB Logo" width="200px">
                 <!-- //<img src="Dr-strange.jpg" class="" alt="image of dr. strange"> -->
             </div>
             
@@ -36,8 +36,7 @@
             </div>
         </div>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
+    <script src="/BOOTSTRAP-GRID/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
