--- a/BOOTSTRAP-GRID/index6.html
+++ b/BOOTSTRAP-GRID/index6.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html;charset=windows-1251" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-     <link href="CSS/bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet">
-     <link href="css/custom.css" rel="stylesheet">   
+     <link href="/BOOTSTRAP-GRID/CSS/bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet">
+     <link href="/BOOTSTRAP-GRID/CSS/custom.css" rel="stylesheet">   
     <title>My first Demo</title>
 </head>
 
 <body>
 <div class="container">
     <div class="row">
-        <div class="col">
-        <img src="BOOTSTRAP-GRID/LOGO UCMB.jpg" class="" alt="UCMB Logo">
+        <div class="col-lg-3">
+        <img src="/BOOTSTRAP-GRID/LOGO UCMB.jpg" class="" alt="UCMB Logo" width="200px">
             <!-- //<img src="Dr-strange.jpg" class="" alt="image of dr. strange"> -->
         </div>
 
-        <div class="col">
+        <div class="col-lg-6">
             <h1></h1>
             <p class="Email body">
                 <strong>NAJJINGO SOLOME</strong><br> <!-- -- formatting name ---->
@@ -29,13 +29,14 @@
                 Hanlon Road, Nsambya&nbsp;- Kampala.<br></span><strong>Email:</strong> snajjingo@ucmb.co.ug <br>
                 <strong>Mobile:</strong>&nbsp;+256&nbsp;784980311&nbsp;<br>
                 <strong>Office:</strong>&nbsp;+256 312266590 <br>
-                Twitter:<a href= "https://twitter.com/UEC_UCMB "><strong> @UEC_UCMB</strong></a> | Youtube: <a href= "https://www.youtube.com/channel/UCyvtd3bpil6vdoTACphWUNw "><span style= "color: 1px solid blue; "></span>
-                <strong>UCMB Nsambya</strong></span></a> <br>Website: <span style= "color: 1px solid blue; "></span><strong><a href= "http://www.ucmb.co.ug/ " title= "http://www.ucmb.co.ug " target= "_blank ">www.ucmb.co.ug            
             </p> 
         </div>
     </div>
+   <p class ="Address">
+ </p> Twitter:<a href= "https://twitter.com/UEC_UCMB "><strong> @UEC_UCMB</strong></a> | Youtube: <a href= "https://www.youtube.com/channel/UCyvtd3bpil6vdoTACphWUNw "><span style= "color: 1px solid blue; "></span>
+        <strong>UCMB Nsambya</strong></span></a> | Website: <span style= "color: 1px solid blue; "></span><strong><a href= "http://www.ucmb.co.ug/ " title= "http://www.ucmb.co.ug " target= "_blank ">www.ucmb.co.ug            
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="/BOOTSTRAP-GRID/js/bootstrap.bundle.js"></script>
 
 </body>
 
