--- a/Personal Blog/index.html
+++ b/Personal Blog/index.html
@@ -99,6 +99,15 @@
                             <a href="#" class="card-link">Read more</a>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Introduction to HTML</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="card-link">Read more</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4 d-none d-md-block">
                     <div class="card">
